# l2py-highfive-client-l2jmobius

./: .gitignore  AGENTS.md  CLAUDE.md  FIXES.md  README.md  SPECIFICATION.md  create plan.md  fix.txt  main.py  pyproject.toml
docs/: ACTIONS.md  API.md  AUTOLOGIN.md  CHECKLIST.md  CONSTANTS.md  CRYPTOGRAPHY.md  EXAMPLES.md  INVENTORY.md  ITEMS.md  MOBS.md  PROTOCOL.md  RACES_CLASSES.md  SKILLS.md
examples/: login_example.py
scripts/: gen_actions_doc.py  gen_items_doc.py  gen_mobs_doc.py  gen_races_classes_doc.py  gen_skills_doc.py
src/l2py/: __init__.py  client.py  config.py  events.py
src/l2py/api/: __init__.py  routes.py  schemas.py  server.py  state.py  ws.py
src/l2py/crypto/: __init__.py  blowfish.py  blowfish_engine.py  game_crypt.py  login_crypt.py  rsa.py
src/l2py/debug/: __init__.py  packet_inspector.py
src/l2py/models/: __init__.py  character.py  server.py
src/l2py/network/: __init__.py  game_connection.py  game_flow.py  login_connection.py  login_flow.py
src/l2py/protocol/: __init__.py  base.py
src/l2py/protocol/game/: __init__.py  client_packets.py  opcode_names.py  serializer.py  server_packets.py
src/l2py/protocol/login/: __init__.py  client_packets.py  server_packets.py
tests/: __init__.py  conftest.py
tests/test_crypto/: __init__.py  test_blowfish.py  test_login_crypt.py  test_rsa.py  test_xor_cipher.py
tests/test_integration/: __init__.py  test_game_flow.py  test_login_flow.py  test_ws_broadcast.py
tests/test_protocol/: __init__.py  test_login_packets.py  test_packet_buffer.py  test_serializer.py
